# gaussmarch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  profile.sh  run.sh
archive/layers/: rasterize_layer.cu  rasterize_layer.h  rasterize_layer_v1.cu  rasterize_layer_v2.cu
data/veg/: snap_vorts.json  vorts.ply
src/: main_fitter.cpp  main_gaussmarch.cpp  main_gaussmarch_snap.cpp  main_viewer.cpp  main_volmarch.cpp
src/app/: app_base.cpp  app_base.h  fitter_app.cpp  fitter_app.h  gaussmarch_app.cpp  gaussmarch_app.h  particle_viewer_app.cpp  particle_viewer_app.h  viewer_app.cpp  viewer_app.h  volmarch_app.cpp  volmarch_app.h
src/camera/: arcball_camera.cpp  arcball_camera.h  camera.h  camera_mode.h  fly_camera.cpp  fly_camera.h
src/cuda/: cuda_buffer.h  cuda_check.h  cuda_defs.h  math_ops.cuh  warp_ops.cuh
src/graphics/: gl_object.h
src/input/: input.cpp  input.h
src/io/: image_io.cpp  image_io.h  ply_io.cpp  ply_io.h  raw_volume_io.cpp  raw_volume_io.h  veg_ply_io.cpp  veg_ply_io.h
src/layers/: gauss_activ_layer.cu  gauss_activ_layer.h  gsplat_rasterize_layer.cu  gsplat_rasterize_layer.h  layer.h  mse_loss_layer.cu  mse_loss_layer.h  persp_project_layer.cu  persp_project_layer.h
src/optimizers/: adam.cu  adam.h  gaussian3d_adam.h
src/optix/: optix_check.h
src/optix_programs/: gaussmarch.cu  gaussmarch_params.h  volmarch.cu  volmarch_params.h
src/pipelines/: gaussian_renderer.cpp  gaussian_renderer.h  image_fitter.cpp  image_fitter.h  pipeline.h  splat_renderer.cpp  splat_renderer.h  volume_renderer.cpp  volume_renderer.h
src/types/: gaussian3d.h  gpu_soa.h  splat2d.h  splat3d.h
src/ui/: transfer_function.cpp  transfer_function.h
src/utils/: ansi_colors.h  gaussian3d_io.cpp  gaussian3d_io.h  logs.h  sh_consts.h  splat_utils.h
